[gd_scene load_steps=9 format=2]

[ext_resource path="res://levels/scripts/level.gd" type="Script" id=1]
[ext_resource path="res://levels/scripts/navigation2d.gd" type="Script" id=2]
[ext_resource path="res://levels/prefabs/extraction_point/ExtractionPoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/characters/player/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/themes/map_labels.tres" type="Theme" id=5]
[ext_resource path="res://levels/scripts/map_labels.gd" type="Script" id=6]
[ext_resource path="res://levels/prefabs/vision_mode/VisionMode.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/gui/GUI.tscn" type="PackedScene" id=8]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="Navigation2D" type="Navigation2D" parent="." groups=[
"navigation",
]]
script = ExtResource( 2 )

[node name="Map" type="TileMap" parent="Navigation2D"]
collision_layer = 2
collision_mask = 5
format = 1

[node name="NonNavigatableFlooring" type="TileMap" parent="Navigation2D"]
format = 1

[node name="Furniture" type="TileMap" parent="Navigation2D"]
collision_layer = 2
collision_mask = 13
format = 1

[node name="Destinations" type="Node" parent="Navigation2D"]

[node name="ExtractionPoint" parent="." instance=ExtResource( 3 )]

[node name="Player" parent="." instance=ExtResource( 4 )]

[node name="SecurityCameras" type="Node" parent="."]

[node name="Guards" type="Node" parent="."]

[node name="Doors" type="Node" parent="."]

[node name="Computers" type="Node" parent="."]

[node name="LockedDoors" type="Node" parent="."]

[node name="Loot" type="Node" parent="."]

[node name="MapLabels" type="Control" parent="."]
theme = ExtResource( 5 )
script = ExtResource( 6 )

[node name="VisionMode" parent="." instance=ExtResource( 7 )]

[node name="GUI" parent="." instance=ExtResource( 8 )]
[connection signal="loot_goal_achieved" from="ExtractionPoint" to="." method="_on_ExtractionPoint_loot_goal_achieved"]
[connection signal="vision_toggled" from="Player" to="." method="_on_Player_vision_toggled"]

[editable path="GUI"]
